# rmsfkit2

./: .codecov.yml  .gitattributes  .lgtm.yml  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: gh-ci.yaml
devtools/conda-envs/: test_env.yaml
docs/: Makefile  README.md  make.bat  requirements.yaml
docs/source/: api.rst  conf.py  getting_started.rst  index.rst
rmsfkit/: __init__.py  _version.py  rmsfkit.py
rmsfkit/data/: files.py
rmsfkit/tests/: conftest.py  test_rmsfkit.py
